[project]
name = "rag-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.0",
    "google-genai>=1.56.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
